tests/ui/wait-for-count.goml
// This test ensures that the `wait-for-count` command is behaving like expected.
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
set-timeout: 500
// Shouldn't wait here since it's already the case.
wait-for-count: ("#js-create-elem", 1)
click: "#js-create-elem"
// Should wait for 250ms here.
wait-for-count: (".random-class", 2)
wait-for-count: (".random-class", 3)
//~^ ERROR: Still didn't find 3 instances of ".random-class" (found 2)
// Check that the script won't stop running anything after the previous command failed.
assert-count: ("//*[@class='random-class']", 3)
